[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pieces/Piece.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 20, 20, 1 )
flag_disable_z = true
direction = Vector3( 2, 2, 2 )
gravity = Vector3( 0, -20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
color = Color( 0.921569, 0.278431, 0.0117647, 0.309804 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.496296, 1 )
colors = PoolColorArray( 0.988235, 0.0196078, 0.0196078, 0.443137, 0.921569, 0.92549, 0.0196078, 0.439216, 1, 1, 1, 0.45098 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -30.0
scale = 10.0
color_ramp = SubResource( 3 )

[node name="Piece" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="MoveTween" type="Tween" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="Fire" type="Particles2D" parent="."]
process_material = SubResource( 4 )

[node name="FireExplosion" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 80
lifetime = 1.5
one_shot = true
process_material = SubResource( 5 )
[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_MoveTween_tween_all_completed"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
